# application-manager-bot

./: .breakpoints  Makefile  README.md  a.txt  count.py  example_task.py  keep_alive.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat
src/: README.md
src/cogs/: README.md  activity.py  app_manage.py  application_manager.py  apply.py  cog_manage.py  cogs_management.py  error_handler.py  guild_finder.py  guild_handler.py  help.py  settings.py  slash_app_manage.py  slash_application_manager.py  slash_apply.py  slash_settings.py
src/cogs/datas/: activity.json  applications.json  slash_utils.py
src/cogs/db/: db.json  replacer.py
src/cogs/etc/: slash_utils.py
src/cogs/utils/: json.py
