[tool.poetry]
name = "application-manager-bot"
version = "0.1.0"
description = ""
authors = ["timelessnesses <mooping3roblox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
aiohttp = {version = "<3.8.0", extras = ["speedups"]}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
autoimport = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
