[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["timelessnesses <mooping3roblox@gmail.com>"]
description = ""
name = "application-manager-bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.8.0"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
typing-extensions = "^4.0.1"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
[tool.poetry.dependencies.aiohttp]
extras = ["speedups"]
version = "<3.8.0"
[tool.poetry.dev-dependencies]
autoimport = "^1.0.2"
black = "^21.12b0"
isort = "^5.10.1"
